--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.11",
+    "axios": "^1.3.5",
     "gatsby": "^5.8.1",
     "gatsby-plugin-manifest": "^5.8.0",
     "gatsby-plugin-sitemap": "^6.8.0",
