--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@apollo/client": "^3.7.11",
     "@react-icons/all-files": "^4.1.0",
     "axios": "^1.3.5",
+    "axios-hooks": "^4.0.0",
     "gatsby": "^5.8.1",
     "gatsby-plugin-manifest": "^5.8.0",
     "gatsby-plugin-sitemap": "^6.8.0",
